--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Fajaruddin Shiddiq - Portfolio</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
-    <meta name="description" content="vCard & Resume Template" />
-    <meta name="keywords" content="vcard, resposnive, resume, personal, card, cv, cards, portfolio" />
+    <meta name="description" content="Resume Template" />
+    <meta name="keywords" content="resume, portfolio" />
     <meta name="author" content="beshleyua" />
 
     <!--
@@ -72,7 +72,7 @@
     <!--
 		Favicons
 	-->
-    <link rel="shortcut icon" href="images/favicons/favicon.ico">
+    <!-- <link rel="shortcut icon" href="images/favicons/favicon.ico"> -->
 
 </head>
 
