remove blog section on mobile

--- a/index.html
+++ b/index.html
@@ -950,22 +950,22 @@
             <!--
 				Card - Blog
 			-->
-            <div class="card-inner blog" id="blog-card">
-                <div class="card-wrap">
+            <!-- <div class="card-inner blog" id="blog-card">
+                <div class="card-wrap"> -->
 
-                    <!--
+            <!--
 						Blog
 					-->
-                    <div class="content blog">
+            <!-- <div class="content blog"> -->
 
-                        <!-- title -->
-                        <div class="title">Latest Posts</div>
+            <!-- title -->
+            <!-- <div class="title">Latest Posts</div> -->
 
-                        <!-- content -->
-                        <div class="row border-line-v">
+            <!-- content -->
+            <!-- <div class="row border-line-v"> -->
 
-                            <!-- blog item -->
-                            <div class="col col-d-12 col-t-12 col-m-12 border-line-h">
+            <!-- blog item -->
+            <!-- <div class="col col-d-12 col-t-12 col-m-12 border-line-h">
                                 <div class="box-item">
                                     <div class="image">
                                         <a href="blog-post-new.html">
@@ -982,10 +982,10 @@
                                         <div class="category">Design</div>
                                     </div>
                                 </div>
-                            </div>
+                            </div> -->
 
-                            <!-- blog item -->
-                            <div class="col col-d-12 col-t-12 col-m-12 border-line-h">
+            <!-- blog item -->
+            <!-- <div class="col col-d-12 col-t-12 col-m-12 border-line-h">
                                 <div class="box-item">
                                     <div class="image">
                                         <a href="blog-post-new.html">
@@ -1001,10 +1001,10 @@
                                         <div class="category">Coding</div>
                                     </div>
                                 </div>
-                            </div>
+                            </div> -->
 
-                            <!-- blog item -->
-                            <div class="col col-d-12 col-t-12 col-m-12 border-line-h">
+            <!-- blog item -->
+            <!-- <div class="col col-d-12 col-t-12 col-m-12 border-line-h">
                                 <div class="box-item">
                                     <div class="image">
                                         <a href="blog-post-new.html">
@@ -1029,7 +1029,7 @@
                     </div>
 
                 </div>
-            </div>
+            </div> -->
 
             <!--
 				Card - Contacts
